--- a/src/components/home/writings.astro
+++ b/src/components/home/writings.astro
@@ -24,7 +24,7 @@ const feed = "https://feed.miantiao.me/";
         <PostsLoop count="3" />
 
         <div class="flex items-center justify-center w-full py-5">
-          <Button text="View All My Writing" link="portfolio/posts" />
+          <Button text="View All My Writing" link="/posts" />
         </div>
       </div>
 
