--- a/src/components/home/writings.astro
+++ b/src/components/home/writings.astro
@@ -9,10 +9,10 @@ const feed = "https://feed.miantiao.me/";
   <h2
     class="text-2xl font-bold leading-10 tracking-tight text-neutral-900 dark:text-neutral-100"
   >
-    Other Experience
+    Other Experiences
   </h2>
   <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
-    Along with coding I also like to write about life and technology. Here are
+    I like to share about problems I solved or progress in my professional life. Here are
     some of my recent posts.
   </p>
 
