--- a/src/components/home/writings.astro
+++ b/src/components/home/writings.astro
@@ -9,7 +9,7 @@ const feed = "https://feed.miantiao.me/";
   <h2
     class="text-2xl font-bold leading-10 tracking-tight text-neutral-900 dark:text-neutral-100"
   >
-    Other Experiences
+    My Posts
   </h2>
   <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
     I like to share about problems I solved or progress in my professional life. Here are
