--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,16 +9,16 @@ import Layout from "../layouts/main.astro";
   <section class="relative z-20 max-w-2xl mx-auto my-12 px-7 lg:px-0">
     <PageHeading
       title="About Me"
-      description="Hello 👋 I'm a frontend engineer from Nanjing, China. I'm passionate about building new products and learning new technology."
+      description="Hello 👋 I'm a Fullstack Web Developer from Santa Fe, Argentina. I'm passionate about building new products and learning new technology."
     />
 
-    <img src="/assets/images/about.jpg" class="relative z-30 w-full my-10 rounded-xl" />
+    <img src="/portfolio/assets/images/about.jpg" class="relative z-30 w-full my-10 rounded-xl" />
 
     <h2 class="mb-2 text-2xl font-bold dark:text-neutral-200">Short Bio</h2>
     <p
       class="text-sm leading-6 text-gray-600 dark:text-neutral-400 sm:leading-7 lg:leading-8 sm:text-base lg:text-lg"
     >
-      Front-end cutter 🧑🏻‍💻, back-end amateur 🤷🏻‍♂️, operations digging holes person 🤦🏻‍♂️.
+      No experience working inside an IT company, yet. Will you be the first one to give me the opportunity?
     </p>
 
     <h2
@@ -28,10 +28,9 @@ import Layout from "../layouts/main.astro";
     </h2>
     <div class="px-5 py-10">
       {
-        experiences.map((experience, loop) => {
+        experiences.map((experience) => {
           return (
             <>
-              {loop == 0 || loop == 1 ? (
                 <div class="pb-10 border-l border-gray-200 dark:border-neutral-700">
                   <AboutExperience
                     dates={experience.dates}
@@ -41,15 +40,6 @@ import Layout from "../layouts/main.astro";
                     logo={experience.logo}
                   />
                 </div>
-              ) : (
-                <AboutExperience
-                  dates={experience.dates}
-                  role={experience.role}
-                  company={experience.company}
-                  description={experience.description}
-                  logo={experience.logo}
-                />
-              )}
             </>
           )
         })
@@ -61,10 +51,10 @@ import Layout from "../layouts/main.astro";
       class="text-sm leading-6 text-gray-600 dark:text-neutral-400 sm:leading-7 lg:leading-8 sm:text-base lg:text-lg"
     >
       If you want to stay up to date with my work be sure to <a
-        href="https://twitter.com/ccikai"
+        href="https://www.linkedin.com/in/fernando-conil-608913185/"
         target="_blank"
-        class="text-indigo-600 underline">follow me on twitter</a
-      >, or you can send me an <a href="mailto:astro-aria#miantiao.me" class="text-indigo-600 underline"
+        class="text-indigo-600 underline">follow me on Linkedin</a
+      >, or you can send me an <a href="mailto:conilfernando@gmail.com" class="text-indigo-600 underline"
         >email</a
       > and I'll be sure to get back to you.
     </p>
