images and experience

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ import Layout from "../layouts/main.astro";
           <li>SQL Data Bases</li>
           <li>and more...</li>
         </ul>
-        <Button text="Contact me" link="conilfernando@gmail.com" />
+        <Button text="Contact me" link="https://www.linkedin.com/in/fernando-conil-608913185/" />
       </div>
       <div
         class="relative justify-end hidden w-full mt-10 md:flex md:pl-10 md:w-1/2 md:mt-0 md:translate-y-4 xl:translate-y-0"
