--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,10 +60,10 @@ import Layout from "../layouts/main.astro";
           </div>
           <div class="relative z-30 px-10">
             <img
-              src="/portfolio/assets/images/photo-01.png"
+              src="/portfolio/assets/images/photo-03.png"
               loading="eager"
               decoding="auto"
-              class="relative z-30 w-full aspect-[790/1189] md:max-w-md mx-auto dark:-translate-y-0.5"
+              class="foto relative z-30 w-full aspect-[790/1189] md:max-w-md mx-auto dark:-translate-y-0.5"
             />
           </div>
           <div
