--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,7 +18,7 @@ import Layout from "../layouts/main.astro";
     <p
       class="text-sm leading-6 text-gray-600 dark:text-neutral-400 sm:leading-7 lg:leading-8 sm:text-base lg:text-lg"
     >
-      I  may not have formal IT experience, but my passion for technology and eagerness to learn are strong. I'm confident that I can quickly adapt and become a valuable member of your team. Would you be open to giving someone with a fresh perspective a chance? <br><br>
+      My passion for technology and eagerness to learn are strong. I'm confident that I can quickly adapt and become a valuable member of your team. Would you be open to giving someone with a fresh perspective a chance? <br><br>
       I have been improving my English skills through private lessons for the past year. I would consider myself an intermediate learner, and while I haven't received any official certification, I feel comfortable using English in various contexts.
     </p>
 
