--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,10 +21,7 @@ import Layout from "../layouts/main.astro";
         <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
           I'm a full stack programmer living in Argentina. <br
             class="hidden lg:block"
-          />I focus on Web development. <br class="hidden lg:block" /><span
-            class="hidden lg:block"
-            >The handsome boy on the right is not me.</span
-          >
+          />I focus on Web development. <br class="hidden lg:block" />
         </p>
         <p class="mb-2 font-semibold text-neutral-800 dark:text-neutral-200">
           I can help you out with:
@@ -32,15 +29,19 @@ import Layout from "../layouts/main.astro";
         <ul
           class="py-2 space-y-[3px] text-sm list-disc list-inside text-neutral-500 dark:text-neutral-400"
         >
-          <li>Astro Development</li>
           <li>React.js Development</li>
-          <li>Java Spring Boot Development</li>
+          <li>Node.js</li>
+          <li>Java Development(Spring Booot & Maven)</li>
           <li>Website Design</li>
           <li>API Rest Development</li>
-          <li>SQL Data Bases</li>
+          <li>SQL & NoSQL Data Bases</li>
+          <li>Wordpress</li>
           <li>and more...</li>
         </ul>
-        <ButtonBlank text="Contact me" link="https://www.linkedin.com/in/fernando-conil-608913185/"/>
+        <ButtonBlank
+          text="Contact me"
+          link="https://www.linkedin.com/in/fernando-conil-608913185/"
+        />
       </div>
       <div
         class="relative justify-end hidden w-full mt-10 md:flex md:pl-10 md:w-1/2 md:mt-0 md:translate-y-4 xl:translate-y-0"
@@ -67,9 +68,10 @@ import Layout from "../layouts/main.astro";
             />
           </div>
           <div
-            class="absolute bottom-0 right-0 z-20 w-full h-full lg:h-[420px] translate-x-0 -translate-y-px 
+            class="absolute bottom-0 right-0 z-20 w-full h-full lg:h-[420px] translate-x-0 -translate-y-px
                     border border-dashed rounded-2xl bg-gradient-to-r dark:from-neutral-950 dark:via-black
-                    dark:to-neutral-950 from-white via-neutral-50 to-white border-neutral-300 dark:border-neutral-700">
+                    dark:to-neutral-950 from-white via-neutral-50 to-white border-neutral-300 dark:border-neutral-700"
+          >
           </div>
         </div>
       </div>
